infra/federation/matrix-b/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-b
  namespace: matrix-b
spec:
  parentRefs:
    - name: federation-b
      namespace: gateway
      sectionName: https-matrix-b
  hostnames:
    - matrix.${federation_partner_server_name}
  rules:
    - matches:
        - path: { type: PathPrefix, value: /_matrix }
        - path: { type: PathPrefix, value: /_synapse }
      backendRefs:
        - name: ess-synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: well-known-b
  namespace: matrix-b
spec:
  parentRefs:
    - name: federation-b
      namespace: gateway
      sectionName: https-wellknown-b
  hostnames:
    - ${federation_partner_server_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: ess-well-known
          port: 8010
